--- a/index.html
+++ b/index.html
@@ -8,30 +8,54 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
-<main id="main">
-    <div class="header">
+<div class="wrapper">
+    <main id="main">
         <header>
             <h1>Dr. Norman Borlaug</h1>
+            <p>The man who saved a billion lives through agricultural research.</p>
         </header>
-    </div>
 
-    <div id="container">
         <div id="img-div">
             <figure>
-                <img id="img">
-                <figcaption id="img-caption"></figcaption>
+                <img id="img" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg">
+                <figcaption id="img-caption">Dr. Norman Borlaug (third from the left) trains biologists in Mexico on how to increase crop yields.</figcaption>
             </figure>
         </div>
 
         <div id="tribute-info">
             <h2>The Life of Norman Borlaug</h2>
-            <p>Norman Borlaug Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat cumque, doloremque dignissimos tempora ab officia ipsa dolor odio rem sapiente! Dolore nesciunt possimus, maxime doloribus ab cumque consequuntur fuga illo!</p>
-            <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Dr. Normal Borlaug's Wikipedia Entry</a>
+            <h3>A timeline of his life:</h3>
+            <ul>
+                <li><strong>1914</strong> - Born in Cresco, Iowa.</li>
+                <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression-era program known as the "National Youth Administration".</li>
+                <li><strong>1935</strong> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said, "All of this left scars on me."</li>
+                <li><strong>1937</strong> - Finishes university and takes a job in the US Forestry Service.</li>
+                <li><strong>1938</strong> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school to study under Stakman, who teaches him about breeding pest-resistent plants.</li>
+                <li><strong>1941</strong> - Tries to enroll in the military in direct response to the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied
+                    science.</li>
+                <li><strong>1942</strong> - Receives a Ph.D. in Genetics and Plant Pathology.</li>
+                <li><strong>1944</strong> - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease-resistant
+                    wheat - including different varieties for each major climate on Earth.</li>
+                <li><strong>1945</strong> - Discovers a way to grow wheat twice each season, doubling wheat yields.</li>
+                <li><strong>1953</strong> - Crosses a short, sturdy dwarf breed of wheat with a high-yielding American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.</li>
+                <li><strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population.</li>
+                <li><strong>1970</strong> - Receives the Nobel Peace Prize in recognition of his contributions to world peace through increasing food supply.</li>
+                <li><strong>1983</strong> - Helps seven African countries dramatically increase their maize and sorghum yields.</li>
+                <li><strong>1984</strong> - Becomes a distinguished professor at Texas A&M University.</li>
+                <li><strong>2005</strong> - States "We will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently
+                    dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
+                <li><strong>2009</strong> - Dies at the age of 95.</li>
+            </ul>
+
+            <p><i>Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i></p>
+            <p><i>-- Indian Prime Minister Manmohan Singh</i></p>
+
+            <p>Find out more over at Dr. Normal Borlaug's</p><a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia Entry</a>
         </div>
-    </div>
-    <footer>
-        <small>&copy; Copyright 2020, Daniel Lloyd, All Rights Reserved.</small>
-    </footer>
-</main>
+        <footer>
+            <small>&copy; Copyright 2020, Daniel Lloyd, All Rights Reserved.</small>
+        </footer>
+    </main>
+</div>
 
 </html>
