centered grid styling

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="utf-8">
     <title id="title">Dr. Norman Borlaug</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A tribute to Dr. Normal Borlaug">
+    <meta name="author" content="Daniel Lloyd">
     <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
-<div class="wrapper">
+<div class="gridWrapper">
     <main id="main">
-        <header>
-            <h1>Dr. Norman Borlaug</h1>
-            <p>The man who saved a billion lives through agricultural research.</p>
-        </header>
-
-        <div id="img-div">
+        <div class="gridBox gridBoxOdd">
+            <header>
+                <h1>Dr. Norman Borlaug</h1>
+                <p>The man who saved a billion lives through agricultural research.</p>
+            </header>
+        </div>
+        <div class="gridBox gridBoxEven">
             <figure>
                 <img id="img" src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg">
                 <figcaption id="img-caption">Dr. Norman Borlaug (third from the left) trains biologists in Mexico on how to increase crop yields.</figcaption>
             </figure>
         </div>
-
-        <div id="tribute-info">
+        <div class="gridBox gridBoxOdd">
             <h2>The Life of Norman Borlaug</h2>
             <h3>A timeline of his life:</h3>
             <ul>
@@ -47,15 +47,16 @@
                 <li><strong>2009</strong> - Dies at the age of 95.</li>
             </ul>
 
-            <p><i>Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i></p>
+            <p><i>Borlaug's life and achievements are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i></p>
             <p><i>-- Indian Prime Minister Manmohan Singh</i></p>
 
-            <p>Find out more over at Dr. Normal Borlaug's</p><a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia Entry</a>
+            <p>Find out more over at Dr. Normal Borlaug's <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia</a> Entry</p>
+    </div>
+        <div class="gridBox gridBoxEven">
+            <footer>
+                <small>&copy; Copyright 2020, Daniel Lloyd, All Rights Reserved.</small>
+            </footer>
         </div>
-        <footer>
-            <small>&copy; Copyright 2020, Daniel Lloyd, All Rights Reserved.</small>
-        </footer>
     </main>
 </div>
-
 </html>
